--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.6.5
   http: ^0.13.4
   flutter_svg: ^1.0.3
+  emoji_picker_flutter:
 
 dev_dependencies:
   flutter_test:
